	   Renamed - net.sourceforge.pmd.jsp.ast.* into net.sourceforge.pmd.lang.jsp.ast.*
	   Renamed - net.sourceforge.pmd.jsp.rules.* into net.sourceforge.pmd.lang.jsp.ast.rule.* and updated to follow conventions
	   Deleted - net.sourceforge.pmd.cpd.cppast.* into net.sourceforge.pmd.lang.cpp.ast.*
	   Deleted - net.sourceforge.pmd.CommonAbstractRule
	   Deleted - net.sourceforge.pmd.SourceType
	   Deleted - net.sourceforge.pmd.SourceTypeDiscoverer
	   Deleted - net.sourceforge.pmd.SourceTypeToRuleLanguageMapper
	   Deleted - net.sourceforge.pmd.TargetJDK1_3
	   Deleted - net.sourceforge.pmd.TargetJDK1_4
	   Deleted - net.sourceforge.pmd.TargetJDK1_5
	   Deleted - net.sourceforge.pmd.TargetJDK1_6
	   Deleted - net.sourceforge.pmd.TargetJDK1_7
	   Deleted - net.sourceforge.pmd.TargetJDKVersion
	   Deleted - net.sourceforge.pmd.sourcetypehandlers.SourceTypeHandlerBroker
	   Deleted - net.sourceforge.pmd.ast.JavaCharStream
	   Deleted - net.sourceforge.pmd.ast.CharStream
	   Deleted - net.sourceforge.pmd.ast.TokenMgrError
	   Deleted - net.sourceforge.pmd.jsp.ast.JspCharStream
	   Deleted - net.sourceforge.pmd.jsp.ast.TokenMgrError

	API Change - Generalize RuleViolation treatment
	   Renamed - net.sourceforge.pmd.IRuleViolation to net.sourceforge.pmd.RuleViolation
	   Renamed - net.sourceforge.pmd.RuleViolation to net.sourceforge.pmd.lang.rule.AbstractRuleViolation
	   Added - net.sourceforge.pmd.RuleViolationComparator
	   Added - net.sourceforge.pmd.lang.java.rule.JavaRuleViolation
	   Added - net.sourceforge.pmd.lang.jsp.rule.JspRuleViolation

	API Change - Generalize DFA treatment
	   Renamed - net.sourceforge.pmd.dfa.IDataFlowNode to net.sourceforge.pmd.lang.dfa.DataFlowNode   
	   Renamed - net.sourceforge.pmd.dfa.DataFlowNode to net.sourceforge.pmd.lang.dfa.AbstractDataFlowNode
	   Renamed - net.sourceforge.pmd.dfa.Linker to net.sourceforge.pmd.lang.dfa.Linker
	   Renamed - net.sourceforge.pmd.dfa.LinkerException to net.sourceforge.pmd.lang.dfa.LinkerException