@@ -1,15 +1,0 @@
-package net.sourceforge.pmd;
-
-/**
- * Constants used when handling names of source files.
- *
- * @author pieter_van_raemdonck - Application Engineers NV/SA - www.ae.be
- */
-// FUTURE This needs to be deleted once SourceFileSelector is reworked
-public class SourceFileConstants {
-
-    public static final String JAVA_EXTENSION_UPPERCASE = "JAVA";
-    public static final String JSP_EXTENSION_UPPERCASE = "JSP";
-    public static final String JSPX_EXTENSION_UPPERCASE = "JSPX";
-
-}
